Fixed scrollover text code

--- a/app/map.html
+++ b/app/map.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <meta charset="utf-8">
+<link rel="stylesheet" type="text/css" href="/app/style.css">
 <style>
 
 .counties {
-  //fill: #EFEFEF;
+
   fill: rgba(239,239,239,.7)
 }
+
 
 .states {
   fill: none;
@@ -13,15 +15,15 @@
   stroke-linejoin: round;
 }
 
+
 </style>
 <body>
-
+  <div class="title">FHA and VA loans originated by nonbanks as a percentage of all mortgages, 2016</div>
+  <svg class="map" width="960" height="600"></svg>
+  <img class="logo" src="/app/BROOKINGS_WEB.png" />
 </body>
 <script src="/app/d3.js"></script>
 <script src="/app/topojson.js"></script>
-<div style="font-weight: 700; font-size: 1.2rem; margin-bottom: 10px;margin-left: 10%; margin-right: 10%; font-family: franklin-gothic-urw,helvetica,sans-serif">FHA and VA loans originated by nonbanks as a percentage of all mortgages, 2016</div>
-<svg style="display: block; margin-left: auto; margin-right: auto" width="960" height="600"></svg>
-<img style="display: block; float: right; margin-top: 2em; max-width: 90%; width: 13rem; margin-right: 10%; padding-right: 0.83em;"src="/app/BROOKINGS_WEB.png" />
 <script>
 
 
@@ -71,6 +73,19 @@ g.selectAll("rect")
     .attr("width", function(d) { return x(d[1]) - x(d[0]); })
     .attr("fill", function(d) { return color(d[0]); });
 
+d3.selectAll("rect")
+  .data(color.range().map(function(d) {
+      d = color.invertExtent(d);
+      if (d[0] == null) d[0] = x.domain()[0];
+      if (d[1] == null) d[1] = x.domain()[1];
+      return d
+    }))
+  .enter().append("rect")
+    .attr("height", 8)
+    .attr("x", function(d) { return x(d[0]); })
+    .attr("width", function(d) { return x(d[1]) - x(d[0]); })
+    .attr("fill", function(d) { return color(d[0]); });
+
 
 g.append("text")
     .attr("class", "caption")
@@ -87,6 +102,7 @@ g.call(d3.axisBottom(x)
     .tickValues(color.domain()))
   .select(".domain")
     .remove();
+
 d3.queue()
     .defer(d3.json, "/app/map-shapes-no-ak-ha.json")
     .defer(d3.tsv, "map-data.txt", function(d) { mortgages.set(d.id, +d.rate); })
@@ -97,40 +113,38 @@ function ready(error, us) {
 
   svg.append("g")
       .attr("class", "counties")
-      .on("mouseover", function(){
-          return tooltip.style("visibility", "visible")
-      })
-      .on("mousemove", function(){
-          return tooltip.style("top", (d3.event.pageY-10) + "px").style("left", (d3.event.pageX+10) + "px")
-      })
-      .on("mouseout", function(){
-          return tooltip.style("visibility", "hidden")
-      })
+
     .selectAll("path")
     .data(topojson.feature(us, us.objects.counties).features)
     .enter().append("path")
       .attr("fill", function(d) { return color(d.rate = mortgages.get(d.id)); })
       .attr("d", path)
-    .append("title")
-      .text(function(d) { return d.rate + "%"; });
+    /*.append("title")
+      .text(function(d) { return d.rate + "%"; });*/
 
   svg.append("path")
       .datum(topojson.mesh(us, us.objects.states, function(a, b) { return a !== b; }))
       .attr("class", "states")
       .attr("d", path)
 
+  d3.selectAll("path")
+    .on("mouseover", function(d){
+        var percent = d.rate
+            if(percent === undefined){
+              return tooltip.style("visibility", "hidden").text("")
+            }
+            else{
+              return tooltip.style("visibility", "visible").text("Mortgages: " + percent + "%")
+            }
+    })
+
+    .on("mousemove", function(){
+      return tooltip.style("top", (d3.event.pageY-10) + "px").style("left", (d3.event.pageX+10) + "px")
+  })
+    .on("mouseout", function(){
+      return tooltip.style("visibility", "hidden")
+  })
 }
-
-  /*.on("mouseover", function(){return tooltip.style("visibility", "visible"), tooltip.text("Percent of all mortgages:" + mortgages.get(d.rate));})
-  .on("mouseover", function(){console.log(mortgages.get(d.rate))})
-  .on("mousemove", function(){return tooltip.style("top", (d3.event.pageY-10)+"px").style("left",(d3.event.pageX+10)+"px");})
-  .on("mouseout", function(){return tooltip.style("visibility", "hidden");});*/
-
-
-
-
-
-
 
 
 </script>
